# wgpu-tracing

./: Cargo.toml  README.md  saves.wgsl
.cargo/: config.toml
shaders/: compute.wgsl  denoiser.wgsl  denoiser.wgsl.bak  shader.wgsl  simple_raytracer_tests.wgsl
src/: camera.rs  chunk_generator.rs  compute.wgsl  compute_pipeline.rs  denoiser_pipeline.rs  init_buffers.rs  init_compute_pipeline.rs  init_textures.rs  init_wgpu.rs  main.rs  structs.rs  tracing_pipeline.rs  tracing_pipeline.rs.bak  tracing_pipeline_new.rs  wgpu_binding_utils.rs  wgpu_utils.rs
src/pipelines/: BindGroups.rs  BuffersUtils.rs  PipelineBuilder.rs  bind_groups.rs  buffers_util.rs  mod.rs  pipeline_builder.rs
src/pipelines/fxaa/: fxaa.comp.wgsl  fxaa_pipeline.rs  mod.rs
src/pipelines/temporal_reprojection/: mod.rs  temporal_reprojection.rs  temporal_reprojection.wgsl
src/pipelines/upscaler/: amd_fsr_easu.wgsl  amd_fsr_rcas.wgsl  pipeline.rs  shader.wgsl
src/utils/: mod.rs  wgpu_binding_texture_utils.rs  wgpu_binding_utils.rs
