[package]
name = "rayt"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
notify = "6.1.1"
image = { version = "0.24.7", default-features = false, features = ["jpeg"] }

winit = "0.28.7"
wgpu = "0.17.0"
naga = { version = "0.13.0" }

cgmath = "0.18.0"

bytemuck = { version = "1.14.0", features = ["derive"] }

pollster = "0.3.0"
log = "0.4.20"

